testdata/baselines/reference/submodule/conformance/nodeModulesAllowJsCjsFromJs(module=node18).errors.txt
bar.ts(1,8): error TS2613: Module '"foo"' has no default export. Did you mean to use 'import { foo } from "foo"' instead?


==== foo.cjs (0 errors) ====
    exports.foo = "foo"
==== bar.ts (1 errors) ====
    import foo from "./foo.cjs"
           ~~~
!!! error TS2613: Module '"foo"' has no default export. Did you mean to use 'import { foo } from "foo"' instead?
    foo.foo;